<resources>
    <string name="app_name">TugasPPPB1P5</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login2">Login</string>
    <string name="new_member">New Member?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="by_checking_the_box_you_agree_to_our">By checking the box you agree to our</string>
    <string name="terms">Terms</string>
    <string name="and">and</string>
    <string name="conditions">Conditions</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="name">Name</string>
    <string name="email2">Email</string>
    <string name="phone2">Phone</string>
    <string name="homepage">Homepage</string>
</resources>