<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center">

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textAlignment="center"
        android:text="@string/login"/>

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:hint="@string/username"
        android:textSize="17sp"
        android:inputType="textPersonName"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:hint="@string/password"
        android:textSize="17sp"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:hint="@string/email"
        android:textSize="17sp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:hint="@string/phone"
        android:textSize="17sp"
        android:inputType="phone"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:gravity="center">

        <CheckBox
            android:id="@+id/chk_agree"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/txt_remember"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textSize="11sp"
            android:layout_marginEnd="4dp" />

        <TextView
            android:id="@+id/txt_forgot_password"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="11sp"
            android:layout_marginEnd="4dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="16sp"
        android:text="@string/login2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/txt_new_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_member"
            android:textSize="13sp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/register"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@android:color/holo_blue_light"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

</LinearLayout>